--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -219,7 +219,7 @@
               <label>Plazo Pago</label>
             </div>
             <div class="col-md-6">            
-              <label class="float-left">{{oFichaTecnicaRes.Contenido.LimiteCredito}}</label>
+              <label class="float-left">{{oFichaTecnicaRes.Contenido.PlazoPago}}</label>
             </div>
             <div class="col-md-2">              
               <label class="float-left">Tipo paridad</label>
@@ -252,7 +252,7 @@
               </div> 
         </div>
 
-    <div id="pdfTable" #pdfTable>
+    <div id="pdfTable" #pdfTable >
 
       <h6 style="text-align: center; color:#24a4cc; ">Ventas año anterior desde {{oBuscar.FechaDesdeAnterior}} hasta {{oBuscar.FechaHastaAnterior}}</h6>
         <table  class="table table-hover table-striped">
