--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -150,24 +150,26 @@
       <br>
       <div class="form-row">
 
-        <div *ngIf="!bCliente" class="form-group col-md-12" >
+        <div *ngIf="!bCliente" class="col-md-6" >
           <label style="text-align: center; color:#183e6f;">{{oPreciosRes.Contenido.TipoCalculoDescripc}}</label> 
           <br>
           <label style="text-align: center; color:#183e6f;">{{oPreciosRes.Contenido.TipoCosteoDescripc +' '+oPreciosRes.Contenido.TipoCosteoCodigo}}</label> 
           <br>
           <label style="text-align: center; color:#183e6f;">{{'Valor agregado '+oPreciosRes.Contenido.ValorAgregado}}</label> 
 
-        </div>
+        </div>       
         
-        <h6 style="text-align: center; color:#24a4cc;">{{oPreciosRes.Contenido.ArticuloDescripc}}</h6> 
-            <div class="form-group col-md-12">
-              <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
-                Imprimir PDF      
-              </button> 
-            </div> 
+            
       </div>
+      <h6 style="text-align: center; font-size:xx-large;">{{oPreciosRes.Contenido.ArticuloDescripc}}</h6> 
   
-  <div id="pdfTable" #pdfTable>
+  <div id="pdfTable" #pdfTable >
+    <div class="form-group col-md-12">
+      <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
+        Imprimir PDF      
+      </button> 
+    </div> 
+
       <table  class="table table-hover table-striped">
         <thead>
           <tr class="EncTabla">
