--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -362,7 +362,7 @@
 
       </div>
 
-       <div *ngIf="bBandera" class="container">
+       <div *ngIf="bBandera" >
         <br>
           <div class="form-row">
             <div class="form-group col-md-1">              
@@ -387,7 +387,8 @@
 
        <div  id="pdfTable" #pdfTable  > 
         <!-- <div id="pdfTable" #pdfTable> -->
-        <table class="table table-hover table-striped" >
+        <table class="table table-hover table-striped" style="display:block;   overflow-x: auto;" [style.height.px]="sHeight" >
+        <!-- <table class="table table-hover table-striped"  style="height: sHeight;" > -->
           <thead >
            <tr class="EncTabla" > 
             <!-- <tr class="EncTabla" > -->
