--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -450,7 +450,7 @@
         </div>
       </div>
 
-    <div *ngIf="bBandera" class="table-responsive anyClass">
+    <div *ngIf="bBandera" >
             <br>
             <div class="form-row">
               <!-- <div class="form-group col-md-1">              
